# HW-2

./: .travis.yml  CMakeLists.txt  README.md  hw-2  main.c
consistent_lib/include/: utils.h
consistent_lib/src/: utils.c
parallel_lib/include/: utils.h
parallel_lib/src/: utils.c
read_write_test/: read_test.c  write_test.c
test/: CMakeLists.txt  tests.cpp
test/data/: btests_emails_broken-ctype.eml  test.eml
